# WebGPU_Engine

./: Cargo.toml  README.md
res/: ashley-cube.mtl  cube.mtl  michael-cube.mtl
src/: main.rs  rendering.rs
src/rendering/: fps_limiter.rs  model.rs  render.rs  shader.wgsl  texture.rs
